--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build Docker Image
       run: |
-        docker build --tag ktusch-sync \ 
-              --build-arg GOOGLE_CREDENTIALS_DECRYPT="${{ secrets.GOOGLE_CREDENTIALS_DECRYPT }}" .
+        docker build --tag ktusch-sync --build-arg GOOGLE_CREDENTIALS_DECRYPT="${{ secrets.GOOGLE_CREDENTIALS_DECRYPT }}" .
   
