--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,4 +14,5 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build --tag ktusch-sync --build-arg GOOGLE_CREDENTIALS_DECRYPT="${{ secrets.GOOGLE_CREDENTIALS_DECRYPT }}" .
+        docker images
   
