--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      
     - name: Build Docker Image
       run: |
-        docker build --tag ktusch-sync --build-arg GOOGLE_CREDENTIALS_DECRYPT="${{ secrets.GOOGLE_CREDENTIALS_DECRYPT }}" .
-        docker images
-  
+        docker build --tag ktusch-sync:${{ github.run_number }} --build-arg GOOGLE_CREDENTIALS_DECRYPT="${{ secrets.GOOGLE_CREDENTIALS_DECRYPT }}" .
+    
+    - name: Save docker image to .tar
+      run: |
+        docker save --output=ktusch-sync:${{ github.run_number }}.tar ktusch-sync:${{ github.run_number }}
+    
+    - name: Copy .tar Image to server
+      uses: garygrossgarten/github-action-scp@release
+      with:
+        local: ktusch-sync:${{ github.run_number }}.tar
+        remote: ~/
+        host: ${{ secrets.HOST }}
+        username: root
+        privateKey: ${{ secrets.PTIVATE_KEY }}
+        
