--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         host: ${{ secrets.HOST }}
         username: root
-        password: ${{ secrets.PASSWORD }}
+        key: ${{ secrets.PTIVATE_KEY }}
         source: ktusch-sync:${{ github.run_number }}.tar
         target: ~/
         
