--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,23 +12,20 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       
-#     - name: Build Docker Image
-#       run: |
-#         docker build --tag ktusch-sync:${{ github.run_number }} --build-arg GOOGLE_CREDENTIALS_DECRYPT="${{ secrets.GOOGLE_CREDENTIALS_DECRYPT }}" .
+    - name: Build Docker Image
+      run: |
+        docker build --tag ktusch-sync:${{ github.run_number }} --build-arg GOOGLE_CREDENTIALS_DECRYPT="${{ secrets.GOOGLE_CREDENTIALS_DECRYPT }}" .
     
-#     - name: Save docker image to .tar
-#       run: |
-#         docker save --output=ktusch-sync:${{ github.run_number }}.tar ktusch-sync:${{ github.run_number }}
-    - name: tar
-      run : |
-        tar -cvf deploy.tar requirements.txt
-        ls
+    - name: Save docker image to .tar
+      run: |
+        docker save --output=ktusch-sync:${{ github.run_number }}.tar ktusch-sync:${{ github.run_number }}
+
     - name: Copy .tar Image to server
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.HOST }}
         username: root
         key: ${{ secrets.PRIVATE_KEY }}
-        source: "deploy.tar"
+        source: "ktusch-sync:${{ github.run_number }}.tar"
         target: "~/"
         
