--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,9 +7,12 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     steps:
+    -uses: actions/checkout@v2
+    -name: Build Docker Image
+      rnu
+
     - name: ls -a via ssh
       uses: fifsky/ssh-action@master
       with:
