--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,9 +32,8 @@ jobs:
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.KEY }}
-        port: ${{ secrets.PORT }}
+        username: root
+        key: ${{ secrets.PRIVATE_KEY }}
         script: |
           docker load --input=ktusch-sync:${{ github.run_number }}.tar
           docker run -d --network=ktusch-sync-net --rm --name ktusch-sync -e DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }} -e HOST=ktusch-postgres -e HUBSPOT_API_KEY=${{ secrets.HUBSPOT_API_KEY }} ktusch-sync:${{ github.run_number }}.tar
