--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,5 +35,6 @@ jobs:
         username: root
         key: ${{ secrets.PRIVATE_KEY }}
         script: |
-          docker load --input=~/ktusch-sync:${{ github.run_number }}.tar
+          cd ~
+          docker load --input=ktusch-sync:${{ github.run_number }}.tar
           docker run -d --network=ktusch-sync-net --rm --name ktusch-sync -e DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }} -e HOST=ktusch-postgres -e HUBSPOT_API_KEY=${{ secrets.HUBSPOT_API_KEY }} ktusch-sync:${{ github.run_number }}.tar
