--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,4 +37,5 @@ jobs:
         script: |
           cd ~
           docker load --input=ktusch-sync:${{ github.run_number }}.tar
+          rm -f ktusch-sync:${{ github.run_number }}.tar
           docker run -d --network=ktusch-sync-net --rm --name ktusch-sync -e DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }} -e HOST=ktusch-postgres -e HUBSPOT_API_KEY=${{ secrets.HUBSPOT_API_KEY }} ktusch-sync:${{ github.run_number }}
