added hostname to database connection and default values

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,3 +42,4 @@ jobs:
       env:
         HUBSPOT_API_KEY: ${{ secrets.HUBSPOT_API_KEY }}
         DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}    
+        HOST: ${{ secrets.HOST }}
