--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,8 +35,9 @@ jobs:
         username: root
         key: ${{ secrets.PRIVATE_KEY }}
         script: |
+          docker rm -f ktusch-sync || true
+          docker prune --all --force
           cd ~
           docker load --input=ktusch-sync:${{ github.run_number }}.tar
           rm -f ktusch-sync:${{ github.run_number }}.tar
-
           docker run -d --network=ktusch-sync-net -p 5000:5000 -v /var/log/ktusch-sync:/app/business/logs --name ktusch-sync -e DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }} -e HOST=ktusch-postgres -e USERNAME=${{ secrets.USERNAME }} -e PASSWORD=${{ secrets.PASSWORD }} -e HUBSPOT_API_KEY=${{ secrets.HUBSPOT_API_KEY }} ktusch-sync:${{ github.run_number }}
