--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
         key: ${{ secrets.PRIVATE_KEY }}
         script: |
           docker rm -f ktusch-sync || true
-          docker prune --all --force
+          docker image prune --all --force
           cd ~
           docker load --input=ktusch-sync:${{ github.run_number }}.tar
           rm -f ktusch-sync:${{ github.run_number }}.tar
